@@ -33,6 +33,15 @@ Features
             incompatibilities, described in the "Backwards
             Incompatibilities" section below.
 
+- We no longer include the ``configure.zcml`` of the ``chameleon.zpt``
+  package within the ``configure.zcml`` of the "repoze.bfg.includes"
+  package.  This has been a no-op for some time now.
+
+-The ``repoze.bfg.chameleon_zpt`` package no longer imports from
+ ``chameleon.zpt`` at module scope, deferring the import until later
+ within a method call.  The ``chameleon.zpt`` package can't be
+ imported on platforms like GAE.
+
 Backwards Incompatibilities
 ---------------------------
 
